# My-project-django

./: Dockerfile  demo.py  devices.csv  docker-compose.yaml  orders.csv  pyproject.toml  requirements.txt
mysite/: log.txt  log.txt.1  log.txt.2  log.txt.3  shopapp-fixtures.json  shopapp-products-fixture.xml  shopapp-products-fixtures.json
mysite/accounts/: forms.py  models.py  tests.py  urls.py  views.py
mysite/accounts/management/commands/: bind_user.py
mysite/accounts/migrations/: 0001_initial.py  0002_profile_avatar.py
mysite/blogapp/: admin.py  models.py  sitemap.py  urls.py  views.py
mysite/blogapp/migrations/: 0001_initial.py  0002_remove_article_author_remove_article_category_and_more.py
mysite/myapiapp/: urls.py  views.py
mysite/myauth/: urls.py  views.py
mysite/mysite/: settings.py  urls.py
mysite/requestdataapp/: forms.py  middlewares.py  urls.py  views.py
mysite/shopapp/: admin.py  admin_mixins.py  common.py  forms.py  models.py  serializers.py  sitemap.py  tests.py  urls.py  utils.py  views.py
mysite/shopapp/fixtures/: orders-fixture.json  products-fixture.json  users-fixture.json
mysite/shopapp/migrations/: 0001_initial.py  0002_product_created_at_product_discount_product_price.py  0003_product_archived.py  0004_order.py  0005_order_user.py  0006_alter_order_delivery_address.py  0007_order_products.py  0008_alter_product_options_product_created_by.py  0009_order_receipt.py  0010_product_preview.py  0011_productimage.py  0012_alter_order_options_alter_product_options_and_more.py  0013_alter_product_created_by.py
(+36 files in other folders)
