[project]
name = "python-django"
version = "0.1.0"
description = ""
authors = [
    {name = "Aleksander Kuznetsov",email = "kosogor2709@mail.ru"}
]
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2.7,<6.0.0)",
    "django-rest-framework (>=0.1.0,<0.2.0)",
    "asgiref (>=3.10.0,<4.0.0)",
    "attrs (>=25.4.0,<26.0.0)",
    "django-debug-toolbar (>=6.1.0,<7.0.0)",
    "django-filter (>=25.2,<26.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "docutils (>=0.22.2,<0.23.0)",
    "drf-spectacular (>=0.29.0,<0.30.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "flake8-docstrings (>=1.7.0,<2.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "inflection (>=0.5.1,<0.6.0)",
    "jsonschema (>=4.25.1,<5.0.0)",
    "jsonschema-specifications (>=2025.9.1,<2026.0.0)",
    "mccabe (>=0.7.0,<0.8.0)",
    "packaging (>=25.0,<26.0)",
    "pillow (>=12.0.0,<13.0.0)",
    "pycodestyle (>=2.14.0,<3.0.0)",
    "pydocstyle (>=6.3.0,<7.0.0)",
    "pyflakes (>=3.4.0,<4.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "referencing (>=0.37.0,<0.38.0)",
    "rpds-py (>=0.28.0,<0.29.0)",
    "snowballstemmer (>=3.0.1,<4.0.0)",
    "sqlparse (>=0.5.3,<0.6.0)",
    "typing-extensions (>=4.15.0,<5.0.0)",
    "uritemplate (>=4.2.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
